--- a/fw2fw/pubspec.yaml
+++ b/fw2fw/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   intro_slider: ^2.2.8
   youtube_player: ^3.5.0
+
+  sqflite: ^1.1.7+1
   
   cupertino_icons: ^0.1.2
 
